--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.4.2",
+    "ajv": "^8.8.0",
+    "ajv-formats": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
