add send verisication mail

--- a/api/.env.example
+++ b/api/.env.example
@@ -3,3 +3,5 @@ POSTGRES_USER=username
 POSTGRES_PASSWORD=password
 DATABASE_URL="postgresql://username:password@host:port/dailyRoutine"
 PORT = 4000
+EMAIL_LOGIN=
+EMAIL_PASSWORD=
