--- a/api/package.json
+++ b/api/package.json
@@ -17,13 +17,15 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.7.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.19",
     "@types/node": "^16.11.7",
+    "@types/nodemailer": "^6.4.4",
     "nodemon": "^2.0.15",
     "prisma": "^3.4.2",
     "ts-node": "^10.4.0",
