--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^3.4.2",
     "ajv": "^8.8.0",
     "ajv-formats": "^2.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -23,6 +24,7 @@
     "nodemailer": "^6.7.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-jwt": "^6.0.2",
