add refresh token endpoint

--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -8,10 +8,10 @@ services:
     environment:
       - POSTGRES_DB=dailyRoutine
       - "POSTGRES_USER=${POSTGRES_USER}"
-      - "POSTGRES_PASSWORD=${POSTGRES_USER}"
+      - "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}"
     volumes:
       - postgres:/var/lib/postgresql/data
     ports:
       - '2137:5432'
 volumes:
-  postgres:
+  postgres: null
