add setResetRequest to auth controller

--- a/api/package.json
+++ b/api/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./dist/index.js",
-    "compile": "tsc && node ./dist/index.js",
-    "dev": "./node_modules/nodemon/bin/nodemon.js -e ts  --exec \"npm run compile\""
+    "dev": "nodemon src/index.ts"
   },
   "author": "",
   "license": "ISC",
