--- a/api/.env.example
+++ b/api/.env.example
@@ -3,6 +3,9 @@ POSTGRES_USER=username
 POSTGRES_PASSWORD=password
 DATABASE_URL="postgresql://username:password@host:port/dailyRoutine"
 PORT = 4000
-EMAIL_LOGIN=
-EMAIL_PASSWORD=
+ACCESS_TOKEN=
+CLIENT_ID=
+CLIENT_SECRET=
+REDIRECT_URI=
+REFRESH_TOKEN=
 JWT_SECRET=
