--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^3.4.2",
     "ajv": "^8.8.0",
     "ajv-formats": "^2.1.1",
+    "axios": "^0.27.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -22,7 +23,8 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.1",
-    "puppeteer": "^15.5.0"
+    "puppeteer": "^15.5.0",
+    "request-ip": "^3.3.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -32,6 +34,7 @@
     "@types/mysql": "^2.15.19",
     "@types/node": "^16.11.7",
     "@types/nodemailer": "^6.4.4",
+    "@types/request-ip": "^0.0.37",
     "nodemon": "^2.0.15",
     "prisma": "^3.4.2",
     "ts-node": "^10.4.0",
