--- a/api/package.json
+++ b/api/package.json
@@ -22,9 +22,11 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "node-cron": "^3.0.1",
     "nodemailer": "^6.7.1",
     "puppeteer": "^15.5.0",
-    "request-ip": "^3.3.0"
+    "request-ip": "^3.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -33,8 +35,10 @@
     "@types/jsonwebtoken": "^8.5.6",
     "@types/mysql": "^2.15.19",
     "@types/node": "^16.11.7",
+    "@types/node-cron": "^3.0.2",
     "@types/nodemailer": "^6.4.4",
     "@types/request-ip": "^0.0.37",
+    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.15",
     "prisma": "^3.4.2",
     "ts-node": "^10.4.0",
