--- a/api/package.json
+++ b/api/package.json
@@ -26,7 +26,8 @@
     "nodemailer": "^6.7.1",
     "puppeteer": "^15.5.0",
     "request-ip": "^3.3.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "web-push": "^3.5.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -39,6 +40,7 @@
     "@types/nodemailer": "^6.4.4",
     "@types/request-ip": "^0.0.37",
     "@types/uuid": "^8.3.4",
+    "@types/web-push": "^3.3.2",
     "nodemon": "^2.0.15",
     "prisma": "^3.4.2",
     "ts-node": "^10.4.0",
