--- a/api/package.json
+++ b/api/package.json
@@ -44,6 +44,7 @@
     "nodemon": "^2.0.15",
     "prisma": "^3.4.2",
     "ts-node": "^10.4.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "workbox-build": "^6.5.4"
   }
 }
