--- a/api/package.json
+++ b/api/package.json
@@ -25,7 +25,9 @@
     "node-cron": "^3.0.1",
     "nodemailer": "^6.7.1",
     "puppeteer": "^15.5.0",
+    "reflect-metadata": "^0.2.1",
     "request-ip": "^3.3.0",
+    "typedi": "^0.10.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
