--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^3.4.2",
+    "@prisma/client": "^5.20.0-dev.21",
     "ajv": "^8.8.0",
     "ajv-formats": "^2.1.1",
     "axios": "^0.27.2",
@@ -42,7 +42,7 @@
     "@types/request-ip": "^0.0.37",
     "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.15",
-    "prisma": "^3.4.2",
+    "prisma": "^5.20.0-dev.21",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   }
